--- a/client/src/pages/dashboard/index.css
+++ b/client/src/pages/dashboard/index.css
@@ -2,6 +2,9 @@
     display: flex;
     flex-direction: row;
     flex-grow: 1;
+    height: 100%;
+    width: 100%;
+    overflow: hidden;
 }
 
 .dashboard-actions {
@@ -14,15 +17,17 @@
 
 .dashboard-content {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     flex-wrap: wrap;
     flex-grow: 1;
     gap: 15px;
     margin: 20px;
+
+    align-content: flex-start;
+    overflow: scroll;
 }
 
 .dashboard-actions-content {
-
     display: flex;
     flex-direction: column;
     gap: 15px;
@@ -38,7 +43,5 @@
 }
 
 .action-create:hover {
-    text-shadow:  1px 1px 5px #00fa9a, 1px -1px 15px #ffdb58, -1px 1px 5px #00fa9a,
-    -1px -1px 15px #ffdb58;
-
+    text-shadow: 1px 1px 5px #00fa9a, 1px -1px 15px #ffdb58, -1px 1px 5px #00fa9a, -1px -1px 15px #ffdb58;
 }
